<resources>
    <string name="app_name">MinuteMan</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="save">Save</string>
    <string name="pin">Pin</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="incorrectPin">Incorrect Pin</string>
    <string name="notes">Notes</string>
    <string name="notepad">Notepad</string>

</resources>