<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controller.CreateNote">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/createNoteToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/backCreateNote"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/left_arrow"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/createNoteToolbar"
            app:layout_constraintStart_toStartOf="@+id/createNoteToolbar"
            app:layout_constraintTop_toTopOf="@+id/createNoteToolbar" />

        <Button
            android:id="@+id/saveNote"
            android:layout_width="83dp"
            android:layout_height="36dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/createNoteToolbar"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bodyTextInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/createBody"
            android:layout_width="match_parent"
            android:layout_height="521dp"
            android:gravity="clip_vertical"
            android:hint="@string/body" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>